# stm32f103discovery

./: .gdbinit  .gitignore  .gitmodules  README.md  configure_debug.sh  configure_release.sh  meson.build  meson_options.txt
cross/: arm-none-eabi-crossfile.txt
devconf/: meson.build
devconf/devconf/: meson.build  playwithcan.dc  playwithcan.toml
include/: fatalerror.h  init_config.h  main.h  meson.build
include/init/: init.h  init_decl.h  meson.build
link/: app_text.ld  meson.build  sections.ld  stm32f103rb_standalone.ld
source/: exceptions.c  fatalerror_debug.c  init.c  main.c  meson.build  reset.c  vector.c
